[package]
name = "reqwest-middleware-cache"
description = "A caching middleware for reqwest"
version = "0.1.2"
authors = ["Kat Marchán <kzm@zkat.tech>", "Christian Haynes <06chaynes@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/06chaynes/reqwest-middleware-cache"
homepage = "https://github.com/06chaynes/reqwest-middleware-cache"
readme = "README.md"
keywords = ["cache", "reqwest", "middleware"]
categories = [
    "caching",
    "web-programming::http-client"
]
edition = "2018"

[dependencies]
anyhow = "1"
async-trait = "0.1"
bincode = { version = "1.3", optional = true }
cacache = { version = "13.0", optional = true }
http = "1.1"
httpdate = "1.0"
http-cache-semantics = { version = "2.1", features = ["reqwest"] }
reqwest = { version = "0.12", default-features = false }
# reqwest-middleware = "0.2.5"
# This branch is a workaround for the bug <https://github.com/TrueLayer/reqwest-middleware/issues/132>
reqwest-middleware = { git = "https://github.com/matiu2/reqwest-middleware.git" }
serde = { version = "1.0", features = ["derive"], optional = true }
task-local-extensions = "0.1"
url = { version = "2.5", features = ["serde"], optional = true }


[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
mockito = "1.4"

[features]
default = ["manager-cacache"]
manager-cacache = ["cacache", "serde", "bincode", "url"]
